<resources>
    <string name="settingsbutton">Open settings</string>
    <string name="notificationsbutton">Open notifications</string>
    <string name="reminderlaterbuttonText">Remind</string>
    <string name="reminderbutton">Remind me later</string>
    <string name="revisebuttonText">Revise</string>
    <string name="statisticsTextView">Statistics in the last week</string>
    <string name="revisebutton">Start studying</string>
    <string name="typeherewindow">Type here…</string>
    <string name="diarymoodbuttonText">Mood</string>
    <string name="diaryratingbuttonText">Rating</string>
    <string name="todaysdiaryentryTextView">Today\'s diary entry</string>
    <string name="diarymoodbutton">Rate today\'s mood</string>
    <string name="diaryratingbutton">Give a rating for today</string>
    <string name="studycalendarTextView">Study calendar</string>
    <string name="dots">…</string>
    <string name="home_nav">Home</string>
    <string name="study_nav">Study</string>
    <string name="diary_nav">Diary</string>
    <string name="user_nav">User</string>
    <string name="headertitleStudy">Start studying</string>
    <string name="subjectchangebutton">Click to change the subject</string>
    <string name="remindersTextView">Reminders:</string>
    <string name="datereminder1">18.9.</string>
    <string name="textreminder1">Bio exam</string>
    <string name="reminderImageView1">BIO tag</string>
    <string name="currentstreakstudy">Current streak: 4 days</string>
    <string name="datereminder2">19.9.</string>
    <string name="textreminder2">Math exam</string>
    <string name="reminderImageView2">Math tag</string>
    <string name="progressonsubjectsTextView">Progress on subjects:</string>
    <string name="progressionstudyTextView">Progress on study goals:</string>
    <string name="Diaryheadertitle">Diary entry</string>
    <string name="datechangebutton">Click to change the diary entry date.</string>
    <string name="diarydatewindowTitle">Today\'s date</string>
    <string name="diaryentriesTextView">Diary entries:</string>
    <string name="moodandratingsTextView">Mood and rating calendar:</string>
    <string name="headerTitleuser">Hello, </string>
    <string name="username">User</string>
    <string name="headeruserStreaks">Current streaks:</string>
    <string name="studystreaks">Study: 4 days</string>
    <string name="diarystreaks">Diary: 4 days</string>
    <string name="userprofilepicture">Click to change user profile picture</string>
    <string name="accountsettingbutton">Account settings</string>
    <string name="deleteaccountbutton">Delete account</string>
    <string name="addreminderbutton">Click to add reminder</string>
    <string name="settingsTextView">Settings</string>
    <string name="currentstreakdiary">Current streak: 4 days</string>
    <string name="register">Register</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="loginNow">Click to log in</string>
    <string name="login">Login</string>
    <string name="registerNow">Click to register</string>
    <string name="backbutton">Back</string>
    <string name="backbuttondesc">Click to go back to settings</string>
    <string name="btn_logindesc">Click to log in</string>
    <string name="btn_registerdesc">Click to register</string>
    <string name="noremindersTextView">No reminders! :)</string>
    <string name="datereminder3">20.9.</string>
    <string name="textreminder3">English exam</string>
    <string name="reminderImageView3">English tag</string>
    <string name="nodiariesTextView">No diary entries :)</string>
    <string name="diarysavebutton">Save diary entry</string>
</resources>