<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DiaryActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrolllayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:background="@color/main_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/headerWindow"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.8"
            app:layout_constraintHeight_percent="0.915"
            android:background="@drawable/rounded_corners"
            android:paddingTop="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:id="@+id/HeaderTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:text="@string/Diaryheadertitle"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/diarywindow"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/third_default"
                app:layout_constraintWidth_percent="1"
                app:layout_constraintHeight_percent="0.75"
                app:layout_constraintTop_toBottomOf="@id/HeaderTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <Button
                    android:id="@+id/datechangebutton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:drawableTop="@drawable/icon_scaled"
                    android:backgroundTint="@color/second_button_color"
                    android:contentDescription="@string/datechangebutton"
                    app:layout_constraintStart_toStartOf="@id/diarywindow"
                    app:layout_constraintTop_toTopOf="@id/diarywindow" />
                <TextView
                    android:id="@+id/diarydatewindowTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/diarydatewindowTitle"
                    android:textSize="17sp"
                    android:textColor="@color/buttontext_color_default"
                    app:layout_constraintTop_toTopOf="@id/datechangebutton"
                    app:layout_constraintStart_toEndOf="@id/datechangebutton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/datechangebutton"/>
                <TextView
                    android:id="@+id/typeherewindow"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="100dp"
                    android:padding="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/typeherewindow"
                    android:textColor="@android:color/darker_gray"
                    android:background="@drawable/rounded_corners"
                    android:breakStrategy="simple"
                    android:scrollbars="vertical"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    app:layout_constraintStart_toStartOf="@id/diarywindow"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/datechangebutton"
                    app:layout_constraintBottom_toBottomOf="@id/diaryratingbutton" />
                <Button
                    android:id="@+id/diarymoodbutton"
                    android:layout_width="90dp"
                    android:layout_height="48dp"
                    android:text="@string/diarymoodbuttonText"
                    android:textSize="11sp"
                    app:cornerRadius="16dp"
                    android:backgroundTint="@color/second_button_color"
                    android:contentDescription="@string/diarymoodbutton"
                    app:layout_constraintTop_toTopOf="@id/typeherewindow"
                    app:layout_constraintStart_toEndOf="@id/typeherewindow"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <Button
                    android:id="@+id/diaryratingbutton"
                    android:layout_width="90dp"
                    android:layout_height="48dp"
                    android:text="@string/diaryratingbuttonText"
                    android:textSize="11sp"
                    app:cornerRadius="16dp"
                    android:backgroundTint="@color/second_button_color"
                    android:contentDescription="@string/diaryratingbutton"
                    app:layout_constraintStart_toEndOf="@id/typeherewindow"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/typeherewindow"/>
                <Button
                    android:id="@+id/diarysavebutton"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_margin="5dp"
                    android:textSize="18sp"
                    android:text="Save"
                    app:cornerRadius="16dp"
                    android:backgroundTint="@color/button_color_default"
                    android:contentDescription="Save a diary entry"
                    app:layout_constraintTop_toBottomOf="@id/typeherewindow"
                    app:layout_constraintBottom_toBottomOf="@id/diarywindow"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:id="@+id/currentstreakdiary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currentstreakdiary"
                android:layout_marginTop="5dp"
                android:textColor="@color/buttontext_color_default"
                app:layout_constraintTop_toBottomOf="@id/diarywindow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/mainLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/headerLayout"
                app:layout_constraintBottom_toBottomOf="parent">
                <TextView
                    android:id="@+id/moodandratingsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moodandratingsTextView"
                    android:textSize="18sp"
                    android:textColor="@color/buttontext_color_default"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="50dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <LinearLayout
                    android:id="@+id/moodandratingsContainer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corners"
                    android:orientation="vertical"
                    app:layout_constraintWidth_percent="0.8"
                    app:layout_constraintTop_toBottomOf="@id/moodandratingsTextView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <com.veroronika.studyplanner.CustomCalendarView
                        android:id="@+id/moodandratingscalendar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/diaryentriesTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/diaryentriesTextView"
                    android:textSize="18sp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:textColor="@color/buttontext_color_default"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/moodandratingsContainer"/>

                <TextView
                    android:id="@+id/nodiariesTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nodiariesTextView"
                    android:textSize="15sp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:visibility="invisible"
                    android:textColor="@color/buttontext_color_default"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    app:layout_constraintTop_toBottomOf="@id/diaryentriesTextView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/moodandratingsTextView"/>


                <com.veroronika.studyplanner.NonScrollableRecyclerView
                    android:id="@+id/diaryRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/diaryentriesTextView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:scrollbars="none" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomnavigationview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners_dark"
        android:layout_margin="10dp"
        app:menu="@menu/navmenu"
        app:labelVisibilityMode="unlabeled"
        app:itemIconSize="24dp"
        app:itemIconTint="@color/white"
        app:itemBackground="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>